cmake_minimum_required(VERSION 3.14)
project(flappybirdwithai)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
set(SOURCE_FILES main.cpp Bird.cpp Bird.h Pipe.cpp Pipe.h)
add_executable(flappybirdwithai ${SOURCE_FILES})
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML REQUIRED system window graphics)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(flappybirdwithai ${SFML_LIBRARIES})
endif ()